# SocDev_Operational_Ontology2

./: .gitignore  CHANGELOG.md  CLAUDE.md  CURRENT_TASK.md  README.md  openapi.json  pyproject.toml
deploy/: .env.example  Dockerfile.api  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: _config.yml  ask.md  change-impact.md  concepts.md  demo-digital-twin.md  demo-story.md  explorer.md  index.md  ingest.md  issues.md  risk-map.md
fixtures/: decision.yaml  event.yaml  event_58.yaml  evidence.yaml  ip.yaml  project.yaml  relation.yaml  role.yaml  scenario.yaml
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
internal_docs/: SoC_dev_process_digital_twin_reference.html  gate_review_twin_prototype.html  ux_design.html
rehearsal/: confluence_wave_W06.json  confluence_wave_W08.json  confluence_wave_W10.json  confluence_wave_W14.json  confluence_wave_W16.json  confluence_wave_W18.json  confluence_wave_W20.json  confluence_wave_W22.json  confluence_wave_W24.json  confluence_wave_W26.json  confluence_wave_W27.json  confluence_wave_W28.json  confluence_wave_W29.json  confluence_wave_W30.json  confluence_wave_W32.json  confluence_wave_W34.json  confluence_wave_W35.json  confluence_wave_W36.json  confluence_wave_W37.json  confluence_wave_W38.json  confluence_wave_W40.json  confluence_wave_W42.json  confluence_wave_W46.json  confluence_wave_W48.json  confluence_wave_W50.json  decisions_W22.csv  decisions_W24.csv  decisions_W26.csv  decisions_W28.csv  decisions_W30.csv  (+55 more)
(+247 files in other folders)
